地図とグラフのUI調整

--- a/index.html
+++ b/index.html
@@ -311,10 +311,10 @@
             <div>
               <p class="legend-title">橋種カテゴリ</p>
               <ul class="legend-list">
-                <li><span class="legend-shape shape-pc"></span>PC 橋</li>
-                <li><span class="legend-shape shape-rc"></span>RC 橋</li>
-                <li><span class="legend-shape shape-steel"></span>鋼橋</li>
-                <li><span class="legend-shape shape-other"></span>その他</li>
+                <li><span class="legend-shape marker-shape-pc"></span>PC 橋</li>
+                <li><span class="legend-shape marker-shape-rc"></span>RC 橋</li>
+                <li><span class="legend-shape marker-shape-steel"></span>鋼橋</li>
+                <li><span class="legend-shape marker-shape-other"></span>その他</li>
               </ul>
             </div>
           </div>
