--- a/index.html
+++ b/index.html
@@ -1013,6 +1013,57 @@
 
 
 
+          <div class="pc-filter-stack" aria-labelledby="pc-filter-heading" aria-describedby="pc-filter-note">
+            <div class="pc-filter-header">
+              <div class="pc-filter-actions">
+                <button
+                  type="button"
+                  class="pc-filter-toggle"
+                  data-pc-filter-toggle
+                  aria-expanded="false"
+                >
+                  PC橋詳細フィルタを表示
+                </button>
+                <button type="button" class="ghost-link" data-pc-filter-reset>リセット</button>
+              </div>
+            </div>
+
+            <p class="filter-helper pc-filter-description">
+              PC橋を軸に、張力方式（プレテン / ポステン / 不明）とポステン形式（中空床版 / T桁 / 箱桁 / その他）を段階的に絞り込めます。
+            </p>
+
+            <div class="pc-filter-body" data-pc-filter-body hidden>
+              <div class="pc-filter-grid">
+                <section class="pc-filter-card" aria-labelledby="pc-tension-heading">
+                  <div class="pc-filter-card-header">
+                    <h3 id="pc-tension-heading">張力方式</h3>
+                    <p>PC橋カテゴリをONにした際に操作できます。</p>
+                  </div>
+                  <div class="chip-group chip-group-nested" role="group" aria-label="張力方式フィルタ" data-filter-pc-tension></div>
+                </section>
+
+                <section class="pc-filter-card" aria-labelledby="pc-post-heading">
+                  <div class="pc-filter-card-header">
+                    <h3 id="pc-post-heading">ポステン形式</h3>
+                    <p>張力方式でポステンを選んだ時のみ操作できます。</p>
+                  </div>
+                  <div class="chip-group chip-group-nested" role="group" aria-label="ポステン形式フィルタ" data-filter-pc-post></div>
+                </section>
+
+                <section class="pc-filter-card pc-filter-card-note" aria-labelledby="pc-filter-note-title">
+                  <div class="pc-filter-card-header">
+                    <h3 id="pc-filter-note-title">動作イメージ</h3>
+                    <p>反応速度や導線の説明スペースとして確保。</p>
+                  </div>
+                  <ul class="notes-list pc-filter-notes" id="pc-filter-note">
+                    <li>PC橋カテゴリをONにすると張力方式 / ポステン形式のチップが操作でき、絞り込みが即座に反映されます。</li>
+                    <li>ブレッドクラムは現在の階層選択をリアルタイムに表示し、全件選択・部分選択の違いも把握できます。</li>
+                    <li>選択条件はグラフやマップにも同期され、PC橋の構成把握に特化した分析を行えます。</li>
+                  </ul>
+                </section>
+              </div>
+            </div>
+          </div>
 
         </section>
 
